perubahan user inventory jadi user supervisor studio

--- a/user_supervisor_studio/index.html
+++ b/user_supervisor_studio/index.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Detail Request Out | Supervisor Studio Fabulash</title>
+		<title>Dashboard | Supervisor Studio Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -59,7 +59,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!-- begin:: Header Mobile -->
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
-				<a href="user_inventory/index.html">
+				<a href="user_supervisor_studio/index.html">
 					<h4 class="sidebar-logo">FABULASH</h4>
 				</a>
 			</div>
@@ -79,7 +79,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- begin:: Aside -->
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
-							<a href="user_inventory/index.html">
+							<a href="user_supervisor_studio/index.html">
 								<h4 class="aside-logo">FABULASH</h4>
 							</a>
 						</div>
@@ -112,28 +112,28 @@ License: You must have a valid license purchased only from themeforest(the above
 								<h4 class="sidebar-logo">SUPERVISOR STUDIO PAGE</h4>
 							</div>
                             <ul class="kt-menu__nav ">
-								<li class="kt-menu__item " aria-haspopup="true"><a href="user_inventory/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_supervisor_studio/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<polygon id="Bound" points="0 0 24 0 24 24 0 24" />
 										<path d="M12.9336061,16.072447 L19.36,10.9564761 L19.5181585,10.8312381 C20.1676248,10.3169571 20.2772143,9.3735535 19.7629333,8.72408713 C19.6917232,8.63415859 19.6104327,8.55269514 19.5206557,8.48129411 L12.9336854,3.24257445 C12.3871201,2.80788259 11.6128799,2.80788259 11.0663146,3.24257445 L4.47482784,8.48488609 C3.82645598,9.00054628 3.71887192,9.94418071 4.23453211,10.5925526 C4.30500305,10.6811601 4.38527899,10.7615046 4.47382636,10.8320511 L4.63,10.9564761 L11.0659024,16.0730648 C11.6126744,16.5077525 12.3871218,16.5074963 12.9336061,16.072447 Z" id="Shape" fill="#000000" fill-rule="nonzero" />
 										<path d="M11.0563554,18.6706981 L5.33593024,14.122919 C4.94553994,13.8125559 4.37746707,13.8774308 4.06710397,14.2678211 C4.06471678,14.2708238 4.06234874,14.2738418 4.06,14.2768747 L4.06,14.2768747 C3.75257288,14.6738539 3.82516916,15.244888 4.22214834,15.5523151 C4.22358765,15.5534297 4.2250303,15.55454 4.22647627,15.555646 L11.0872776,20.8031356 C11.6250734,21.2144692 12.371757,21.2145375 12.909628,20.8033023 L19.7677785,15.559828 C20.1693192,15.2528257 20.2459576,14.6784381 19.9389553,14.2768974 C19.9376429,14.2751809 19.9363245,14.2734691 19.935,14.2717619 L19.935,14.2717619 C19.6266937,13.8743807 19.0546209,13.8021712 18.6572397,14.1104775 C18.654352,14.112718 18.6514778,14.1149757 18.6486172,14.1172508 L12.9235044,18.6705218 C12.377022,19.1051477 11.6029199,19.1052208 11.0563554,18.6706981 Z" id="Path" fill="#000000" opacity="0.3" />
 									</g>
 								</svg></span><span class="kt-menu__link-text">Dashboard</span></a></li>
-								<li class="kt-menu__item" aria-haspopup="true"><a href="user_inventory/masterData.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_supervisor_studio/masterData.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                         <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
                                         <path d="M4.85714286,1 L11.7364114,1 C12.0910962,1 12.4343066,1.12568431 12.7051108,1.35473959 L17.4686994,5.3839416 C17.8056532,5.66894833 18,6.08787823 18,6.52920201 L18,19.0833333 C18,20.8738751 17.9795521,21 16.1428571,21 L4.85714286,21 C3.02044787,21 3,20.8738751 3,19.0833333 L3,2.91666667 C3,1.12612489 3.02044787,1 4.85714286,1 Z M8,12 C7.44771525,12 7,12.4477153 7,13 C7,13.5522847 7.44771525,14 8,14 L15,14 C15.5522847,14 16,13.5522847 16,13 C16,12.4477153 15.5522847,12 15,12 L8,12 Z M8,16 C7.44771525,16 7,16.4477153 7,17 C7,17.5522847 7.44771525,18 8,18 L11,18 C11.5522847,18 12,17.5522847 12,17 C12,16.4477153 11.5522847,16 11,16 L8,16 Z" id="Combined-Shape-Copy" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
                                         <path d="M6.85714286,3 L14.7364114,3 C15.0910962,3 15.4343066,3.12568431 15.7051108,3.35473959 L20.4686994,7.3839416 C20.8056532,7.66894833 21,8.08787823 21,8.52920201 L21,21.0833333 C21,22.8738751 20.9795521,23 19.1428571,23 L6.85714286,23 C5.02044787,23 5,22.8738751 5,21.0833333 L5,4.91666667 C5,3.12612489 5.02044787,3 6.85714286,3 Z M8,12 C7.44771525,12 7,12.4477153 7,13 C7,13.5522847 7.44771525,14 8,14 L15,14 C15.5522847,14 16,13.5522847 16,13 C16,12.4477153 15.5522847,12 15,12 L8,12 Z M8,16 C7.44771525,16 7,16.4477153 7,17 C7,17.5522847 7.44771525,18 8,18 L11,18 C11.5522847,18 12,17.5522847 12,17 C12,16.4477153 11.5522847,16 11,16 L8,16 Z" id="Combined-Shape" fill="#000000" fill-rule="nonzero"/>
                                     </g>
                                 </svg></span><span class="kt-menu__link-text">Master Data</span></a></li>
-                                <li class="kt-menu__item " aria-haspopup="true"><a href="user_inventory/stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+                                <li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
 										<path d="M4.21611835,7.74669402 C4.30015839,7.64056877 4.40623188,7.55087574 4.5299008,7.48500698 L11.5299008,3.75665466 C11.8237589,3.60013944 12.1762411,3.60013944 12.4700992,3.75665466 L19.4700992,7.48500698 C19.5654307,7.53578262 19.6503066,7.60071528 19.7226939,7.67641889 L12.0479413,12.1074394 C11.9974761,12.1365754 11.9509488,12.1699127 11.9085461,12.2067543 C11.8661433,12.1699127 11.819616,12.1365754 11.7691509,12.1074394 L4.21611835,7.74669402 Z" id="Path" fill="#000000" opacity="0.3" />
 									</g>
 								</svg></span><span class="kt-menu__link-text">Stock</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <path d="M10.9,2 C11.4522847,2 11.9,2.44771525 11.9,3 C11.9,3.55228475 11.4522847,4 10.9,4 L6,4 C4.8954305,4 4,4.8954305 4,6 L4,18 C4,19.1045695 4.8954305,20 6,20 L18,20 C19.1045695,20 20,19.1045695 20,18 L20,16 C20,15.4477153 20.4477153,15 21,15 C21.5522847,15 22,15.4477153 22,16 L22,18 C22,20.209139 20.209139,22 18,22 L6,22 C3.790861,22 2,20.209139 2,18 L2,6 C2,3.790861 3.790861,2 6,2 L10.9,2 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -142,12 +142,12 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Request</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_inventory/request_in.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request In</span></a></li>
-											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_inventory/request_out.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Out</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/request_in.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request In</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/request_out.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Out</span></a></li>
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item" aria-haspopup="true"><a href="user_inventory/profile.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_supervisor_studio/profile.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -271,16 +271,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Request </h3>
+										Dashboard </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_inventory/request_out.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
-										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_inventory/request_out.html" class="kt-subheader__breadcrumbs-link">
-											Request out </a>
-										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_inventory/request_out_detail_diterima.html" class="kt-subheader__breadcrumbs-link">
-											Request details </a>
+										<a href="user_supervisor_studio/index.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 									</div>
 								</div>
 							</div>
@@ -289,93 +283,9 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
-                        <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row justify-content-center">
 
-								<div class="col-12">
-
-                                    <!--begin::Portlet-->
-									<div class="kt-portlet">
-										<div class="kt-portlet__head">
-											<div class="kt-portlet__head-label">
-												<span class="kt-portlet__head-icon">
-													<i class="flaticon2-cube-1"></i>
-												</span>
-												<h3 class="kt-portlet__head-title">
-													New Request
-												</h3>
-											</div>
-										</div>
-										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom: 50px;">
-                                                <h5 class="col-12 color-main-dark" name="kode_request" style="margin-bottom: 20px;">#123456</h5>
-												<div class="col-4" style="padding-right:0px;">
-	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
-												</div>
-												<div class="col-4" style="padding-left:0px; padding-right:0px; text-align:center;">
-	                                                <span class="kt-font-bold">Date Terkirim : <span name="date_approve">15 November 2019</span></span>
-												</div>
-												<div class="col-4" style="padding-left:0px;text-align:right;">
-	                                                <span class="kt-font-bold">Date Diterima : <span name="date_approve">15 November 2019</span></span>
-												</div>
-                                            </div>
-                                            <div class="justify-center kt-margin-b-20">
-                                                <span class="kt-margin-10 kt-font-bold kt-font-brand">Request</span><i class="flaticon2-next" style="padding: 10px 0px;"></i>
-                                                <span class="kt-margin-10 kt-font-bold kt-font-brand">Terkirim</span><i class="flaticon2-next" style="padding: 10px 0px;"></i>
-                                                <span class="kt-margin-10 kt-font-bold kt-font-brand">Diterima</span>
-                                            </div>
-                                            <table class="table table-bordered table-hover well-align-table" role="grid">
-                                                <thead>
-                                                    <tr role="row">
-                                                        <th style="width: 5%">No</th>
-                                                        <th style="width: 25%">Nama Barang</th>
-                                                        <th style="width: 15%">Satuan</th>
-                                                        <th style="width: 12.5%">Request</th>
-                                                        <th style="width: 12.5%">Terkirim</th>
-                                                        <th style="width: 12.5%">Diterima</th>
-                                                        <th style="width: 17.5%">Margin Hilang</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody id="item_list">
-                                                    <tr role="row">
-                                                        <td>1</td>
-                                                        <td class="text-center">
-                                                            <select class="form-control" name="request_barang" disabled>
-        														<option>Eyelash Size 12</option>
-        														<option>Eyelash Size 12</option>
-        														<option>Eyelash Size 12</option>
-        													</select>
-                                                        </td>
-														<td class="text-center">
-                                                            <select class="form-control" name="request_satuan" disabled>
-        														<option>Box</option>
-        														<option>Box</option>
-        														<option>Box</option>
-        													</select>
-                                                        </td>
-														<td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_request" value="5" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_terkirim" value="3" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_diterima" value="3" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_margin" value="2" readonly>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-										</div>
-									</div>
-
-									<!--end::Portlet-->
-								</div>
-
-							</div>
 
 						</div>
 
@@ -451,8 +361,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
-		<script src="assets/js/script/datatable_inventory.js"></script>
-		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<!--end::Page Scripts -->
 	</body>
